--- a/src/app/views/layout/footer/footer.component.html
+++ b/src/app/views/layout/footer/footer.component.html
@@ -2,5 +2,6 @@
   class="footer d-flex flex-column flex-md-row align-items-center justify-content-between px-4 py-3 border-top small">
   <p class="text-secondary mb-1 mb-md-0">Copyright © 2024 <a href="https://www.nobleui.com" target="_blank">NobleUI</a>.
   </p>
-  <p class="text-secondary">Handcrafted With mayur <i class="feather icon-heart mb-1 text-primary ms-1 icon-sm"></i></p>
+  <p class="text-secondary">Handcrafted With mayurkejale <i
+      class="feather icon-heart mb-1 text-primary ms-1 icon-sm"></i></p>
 </footer>
